objects/PatchCriteriaRule__c.object
<CustomObject>
    <fields>
        <fullName>Match_List_Last_Modified_Date__c</fullName>
        <label>Match List Last Modified Date</label>
        <summarizedField>PatchMatchList__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>PatchMatchList__c.Patch_Criteria_Rule__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in match list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <label>Patch</label>
        <referenceTo>Patch__c</referenceTo>
        <relationshipLabel>Patch Criteria Rules</relationshipLabel>
        <relationshipName>Patch_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProcessingSequence__c</fullName>
        <label>Processing Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_High__c</fullName>
        <label>Range High</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_Low__c</fullName>
        <label>Range Low</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Patch Criteria Rule</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Patch Criteria Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patch Criteria Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>